Basic index show

--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "license": "MIT",
   "dependencies": {
     "alt": "^0.17.1",
+    "axios": "^0.5.4",
     "babel": "^5.8.20",
     "babel-loader": "^5.3.2",
+    "body-parser": "^1.13.3",
+    "commonmark": "^0.21.0",
     "express": "^4.13.2",
     "express-react-views": "^0.8.2",
+    "gray-matter": "^2.0.1",
     "iso": "^4.1.0",
+    "json-loader": "^0.5.2",
     "lodash": "^3.10.0",
     "node-dev": "^2.6.2",
     "node-libs-browser": "^0.5.2",
