--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "babel-loader": "^5.3.2",
     "body-parser": "^1.13.3",
     "commonmark": "^0.21.0",
+    "connect-history-api-fallback": "^1.1.0",
     "express": "^4.13.2",
     "express-react-views": "^0.8.2",
+    "front-matter": "^1.0.0",
     "gray-matter": "^2.0.1",
+    "http-proxy": "^1.11.1",
     "iso": "^4.1.0",
     "json-loader": "^0.5.2",
     "lodash": "^3.10.0",
+    "marked": "^0.3.5",
     "method-override": "^2.3.5",
-    "node-dev": "^2.6.2",
     "node-libs-browser": "^0.5.2",
     "nodemon": "^1.4.0",
     "react": "^0.13.3",
