--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "api": "node api/index.js",
     "build": "webpack -p --progress --colors",
-    "dev": "NODE_ENV=development nodemon index.js",
     "clean": "rm data/trash/*",
+    "dev": "NODE_ENV=development nodemon index.js",
     "start": "NODE_ENV=production node index.js"
   },
   "author": "Brent Jackson",
@@ -21,6 +21,7 @@
     "body-parser": "^1.13.3",
     "commonmark": "^0.21.0",
     "connect-history-api-fallback": "^1.1.0",
+    "cors": "^2.7.1",
     "express": "^4.13.2",
     "express-react-views": "^0.8.2",
     "gray-matter": "^2.0.1",
