--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "webpack -p --progress --colors",
     "clean": "rm data/trash/*",
     "dev": "NODE_ENV=development nodemon index.js",
+    "forever": "forever start api & NODE_ENV=development forever start index.js",
+    "stop": "forever stopall",
     "start": "NODE_ENV=production node index.js"
   },
   "author": "Brent Jackson",
@@ -24,6 +26,7 @@
     "cors": "^2.7.1",
     "express": "^4.13.2",
     "express-react-views": "^0.8.2",
+    "forever": "^0.15.1",
     "gray-matter": "^2.0.1",
     "http-proxy": "^1.11.1",
     "iso": "^4.1.0",
