Start redux boilerplate

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "webpack -p --progress --colors",
     "clean": "rm data/trash/*",
     "dev": "NODE_ENV=development nodemon index.js",
+    "prod": "NODE_ENV=production node index.js",
     "start": "NODE_ENV=development forever start -c nodemon index.js",
-    "stop": "forever stopall",
-    "prod": "NODE_ENV=production node index.js"
+    "stop": "forever stopall"
   },
   "author": "Brent Jackson",
   "license": "MIT",
@@ -31,11 +31,13 @@
     "lodash": "^3.10.0",
     "marked": "^0.3.5",
     "method-override": "^2.3.5",
-    "node-libs-browser": "^0.5.2",
     "nodemon": "^1.4.0",
     "react": "^0.13.3",
     "react-hot-loader": "^1.2.8",
+    "react-redux": "^0.2.2",
     "react-router": "^0.13.3",
+    "redux": "^1.0.0-rc",
+    "redux-thunk": "^0.1.0",
     "simple-modular-scale": "^1.0.2",
     "spectralize": "^1.0.0",
     "webpack": "^1.10.5",
