--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "NODE_ENV=development nodemon index.js",
     "prod": "NODE_ENV=production node index.js",
     "start": "NODE_ENV=development forever start -c nodemon index.js",
-    "static": "NODE_ENV=static webpack -p --progress --colors --config webpack.static.config.js",
+    "static": "NODE_ENV=static webpack --progress --colors --config webpack.static.config.js",
     "stop": "forever stopall"
   },
   "author": "Brent Jackson",
@@ -41,6 +41,7 @@
     "redux-thunk": "^0.1.0",
     "simple-modular-scale": "^1.0.2",
     "spectralize": "^1.0.0",
+    "static-site-generator-webpack-plugin": "^1.0.1",
     "webpack": "^1.10.5",
     "webpack-dev-server": "^1.10.1"
   }
