--- a/package.json
+++ b/package.json
@@ -7,30 +7,23 @@
     "build": "NODE_ENV=production webpack -p --progress --colors",
     "clean": "rm data/trash/*",
     "dev": "NODE_ENV=development nodemon index.js",
-    "prod": "NODE_ENV=production node index.js",
-    "start": "NODE_ENV=development forever start -c nodemon index.js",
-    "static": "NODE_ENV=static webpack --progress --colors --config webpack.static.config.js",
-    "stop": "forever stopall"
+    "start": "NODE_ENV=production nodemon index.js",
+    "static": "NODE_ENV=static webpack --progress --colors --config webpack.static.config.js"
   },
   "author": "Brent Jackson",
   "license": "MIT",
   "dependencies": {
-    "alt": "^0.17.1",
     "axios": "^0.5.4",
-    "babel": "^5.8.20",
+    "babel": "^5.8.21",
     "babel-loader": "^5.3.2",
-    "babel-plugin-react-autoprefix": "^0.2.1",
     "body-parser": "^1.13.3",
     "commonmark": "^0.21.0",
-    "connect-history-api-fallback": "^1.1.0",
     "cors": "^2.7.1",
-    "express": "^4.13.2",
-    "forever": "^0.15.1",
+    "express": "^4.13.3",
     "gray-matter": "^2.0.1",
     "http-proxy": "^1.11.1",
     "json-loader": "^0.5.2",
-    "lodash": "^3.10.0",
-    "marked": "^0.3.5",
+    "lodash": "^3.10.1",
     "method-override": "^2.3.5",
     "nodemon": "^1.4.0",
     "react": "^0.13.3",
@@ -42,7 +35,7 @@
     "simple-modular-scale": "^1.0.2",
     "spectralize": "^1.0.0",
     "static-site-generator-webpack-plugin": "^1.0.1",
-    "webpack": "^1.10.5",
+    "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1"
   }
 }
