Update posts and styles

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.13.3",
     "commonmark": "^0.21.0",
     "cors": "^2.7.1",
+    "empty-module": "0.0.2",
     "express": "^4.13.3",
     "gray-matter": "^2.0.1",
     "http-proxy": "^1.11.1",
@@ -29,7 +30,7 @@
     "nodemon": "^1.4.0",
     "react": "^0.13.3",
     "react-hot-loader": "^1.2.8",
-    "react-redux": "^0.2.2",
+    "react-redux": "^0.6.0",
     "react-router": "^0.13.3",
     "redux": "^1.0.0-rc",
     "redux-thunk": "^0.1.0",
